WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53531
Fix the incorrect usage of RetainPtr cases in GraphicsContext3DCG.cpp
https://bugs.webkit.org/show_bug.cgi?id=53531
Summary
Fix the incorrect usage of RetainPtr cases in GraphicsContext3DCG.cpp
Zhenyao Mo
Reported
2011-02-01 14:00:56 PST
With this fix, the random crash while running WebGL conformance tests should be gone.
Attachments
Patch
(2.32 KB, patch)
2011-02-01 14:05 PST
,
Zhenyao Mo
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2011-02-01 14:05:06 PST
Created
attachment 80822
[details]
Patch
Kenneth Russell
Comment 2
2011-02-01 14:12:23 PST
Thanks for fixing this and sorry for the bad code.
Zhenyao Mo
Comment 3
2011-02-01 14:30:02 PST
Committed
r77305
: <
http://trac.webkit.org/changeset/77305
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug