2011-02-01  Zhenyao Mo  <zmo@google.com>

Reviewed by Darin Adler.

        Fix the incorrect usage of RetainPtr cases in GraphicsContext3DCG.cpp
        https://bugs.webkit.org/show_bug.cgi?id=53531

        With this fix, running WebGL conformance tests should no longer crash randomly.

        * platform/graphics/cg/GraphicsContext3DCG.cpp:
        (WebCore::GraphicsContext3D::getImageData):


Canonical link: https://commits.webkit.org/67405@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77305 268f45cc-cd09-0410-ab3c-d52691b4dbfc